base version no strict
