# internal/api/openapi.yaml
@@ -27,6 +27,8 @@ paths:
                 $ref: "#/components/schemas/DownloadsResponse"
         "400":
           $ref: '#/components/responses/BadRequest'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
   /downloads/{id}:
     get:
       summary: Просмотр статусов
@@ -47,6 +49,8 @@ paths:
                 $ref: "#/components/schemas/DownloadsIdResponse"
         "400":
           $ref: '#/components/responses/BadRequest'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
 
 #
 #  /downloads/{id}/files/{file_id}:
@@ -143,6 +147,12 @@ components:
   responses:
     BadRequest:
       description: Некорректное тело запроса
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+    InternalServerError:
+      description: Внутренняя ошибка сервиса
       content:
         application/json:
           schema:
